apply plugin: 'java'

sourceCompatibility = '1.8'
targetCompatibility = '1.8'
version = '1.0'

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

repositories {
    mavenCentral()
}

dependencies {
    testCompile 'junit:junit:4.12'
    testCompile 'org.mockito:mockito-all:1.10.19'
}
